# resonators

./: .gitignore  CLAUDE.md  PLAN_E2E.md  README.md  config.json  config_e2e.json  config_e2e_cpu.json  generate.py  infer.py  requirements.txt  train.py  train_e2e.py
.claude/: settings.local.json
IthacaCoreResonator/: CMakeLists.txt  PLAN.md  SYSEX.md  gui_main.cpp  main.cpp
IthacaCoreResonator/docs/: ANALYSIS.md  COMPILE.md  PLAN.md  SYSEX.md
IthacaCoreResonator/dsp/: dsp_chain.cpp  dsp_chain.h
IthacaCoreResonator/dsp/bbe/: bbe.cpp  bbe.h
IthacaCoreResonator/dsp/limiter/: limiter.cpp  limiter.h
IthacaCoreResonator/gui/: resonator_gui.cpp  resonator_gui.h
IthacaCoreResonator/paper_compare/: 1095_1.md  2012_Teng_PianoSynthesis.md  2409_03481v3.md  Breve.md  ChabassierChaigneJoly.md  Computer_Simulation_Piano_Tones.md  HammerJSVV3.md  ISMA_MAESSTRO.md  Piano-Chaigne-SMAC13.md  Piano-model-revis.md  RR-8181.md  RR-9516.md  RR_9530.md  SubM2AN_author.md  frsip-03-1276748-1.md  frsip-03-1276748-2.md  frsip-03-1276748.md  hal.md
IthacaCoreResonator/sampler/: core_logger.h
IthacaCoreResonator/soundbanks/: .gitignore
IthacaCoreResonator/synth/: biquad_eq.cpp  biquad_eq.h  midi_input.cpp  midi_input.h  note_lut.cpp  note_lut.h  note_params.h  resonator_engine.cpp  resonator_engine.h  resonator_voice.cpp  resonator_voice.h  synth_config.h  voice_manager.cpp  voice_manager.h
analysis/: compute-spectral-eq.py  compute_spectral_eq.py  extract-params.py  extract_log.txt  extract_params.py  generate-samples.py  interpolate_missing_notes.py  params_A0.json  params_C8.json  params_test.json  physics-synth.py  physics_synth.py  profile.pt  smooth_tau_cross_velocity.py  synth_config.json  train-instrument-profile.py  train_ddsp.py  train_instrument_profile.py
data/: dataset.py  piano_dataset.py  prepare.py
docs/: ARCHITECTURE.md  GUI.md  REALTIME.md  ROADMAP.md
gui/: config_schema.py  logger.py  server.py
gui/routers/: audio.py  generate.py  pipeline.py  profile.py  sessions.py
gui/sessions/demo_session/: config.json
gui/static/: app.js  index.html  style.css
losses/: losses.py  piano_loss.py
models/: controller.py  diff_synth.py  envelope_net.py  physics_bank.py  resonator_bank.py  setter_nn.py
